@@ -22,6 +22,8 @@ import org.irods.jargon.core.exception.NoMoreRulesException;
 import org.irods.jargon.core.exception.NoResourceDefinedException;
 import org.irods.jargon.core.exception.RemoteScriptExecutionException;
 import org.irods.jargon.core.exception.SpecificQueryException;
+import org.irods.jargon.core.exception.UnixFileMkdirException;
+import org.irods.jargon.core.exception.UnixFileRenameException;
 import org.irods.jargon.core.exception.ZoneUnavailableException;
 import org.irods.jargon.core.protovalues.ErrorEnum;
 import org.slf4j.Logger;
@@ -69,6 +71,17 @@ public class IRODSErrorScanner {
 
 		if (message == null) {
 			message = "";
+		}
+
+		// non-zero value, create appropriate exception, first try some ranges
+		// (especially for unix file system exceptions, which can have subcodes
+
+		if (infoValue >= -520013 && infoValue <= -520000) {
+			throw new UnixFileMkdirException("Exception making unix directory",
+					infoValue);
+		} else if (infoValue >= -528036 && infoValue <= -528000) {
+			throw new UnixFileRenameException(
+					"Exception renaming file in file system", infoValue);
 		}
 
 		ErrorEnum errorEnum;
